--- a/kabinet/tovari.html
+++ b/kabinet/tovari.html
@@ -293,7 +293,7 @@
                                                     <svg viewBox="0 0 16 16" width="1em" height="1em" focusable="false" role="img" aria-label="chevron down" icon="chevron-down" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi-chevron-down b-icon bi"><g><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path></g></svg>
                                                 </button>
 
-                                                <div id="services" class="collapse show " id="collapse">
+                                                <div id="services" class="collapse show">
                                                     <div class="card p-2">
                                                         <div class="form-group d-flex align-items-center">
                                                             <div class="d-inline-block mr-2 mb-1">
